--- a/src/info.css
+++ b/src/info.css
@@ -1,142 +1,147 @@
 .infopanel {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: var(--white);
-  background-color: var(--black);
-  z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: var(--white);
+    background-color: var(--black);
+    z-index: 2;
 }
 
 .infopanel.small {
-  /* width: 380px; */
-  /* padding: 25px; */
-  box-sizing: border-box;
-  gap: 15px;
+    /* width: 380px; */
+    /* padding: 25px; */
+    box-sizing: border-box;
+    gap: 15px;
 }
 
 @media (min-width: 380px) {
-  .infopanel.small {
-    width: 380px;
-    padding: 25px;
-  }
+    .infopanel.small {
+        width: 380px;
+        padding: 25px;
+    }
 }
+
 @media (max-width: 380px) {
-  .infopanel.small {
-    /* border: 5px solid blue; */
-    max-width: 90vw;
-    /* width: min-content; */
-    margin: 0 auto;
-    padding: 5vw 0;
-    box-sizing: border-box;
-  }
+    .infopanel.small {
+        /* border: 5px solid blue; */
+        max-width: 90vw;
+        /* width: min-content; */
+        margin: 0 auto;
+        padding: 5vw 0;
+        box-sizing: border-box;
+    }
 }
 
 .infopanel.large {
-  box-sizing: border-box;
-  /* width: 374px; */
-  padding: 25px;
-  gap: 15px;
+    box-sizing: border-box;
+    /* width: 374px; */
+    padding: 25px;
+    gap: 15px;
+}
+
+/* Infopanel.large will float (in Desktop mode > 960px) */
+@media (min-width: 960px) {
+    .infopanel.large {
+        position: absolute;
+        left: auto;
+        right: 0;
+        z-index: 1;
+        width: 374px;
+        height: 330px;
+    }
 }
 
 @media (max-width: 960px) {
-  .infopanel.large {
-    /* width: 586px; */
-    width: 100%;
-    /* height: 250px; */
-    height: max-content;
-    align-content: center;
-    /* border: 10px solid green; */
-  }
-}
-
-@media (min-width: 960px) {
-  .infopanel.large {
-    width: 374px;
-  }
+    .infopanel.large {
+        position: static;
+        width: 100%;
+        height: max-content;
+        align-content: center;
+    }
 }
 
 .info-titlebox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 5px;
-  font-family: "Titillium Web", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    font-family: "Titillium Web", sans-serif;
 }
 
 .info-title {
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: -0.025em;
-  color: var(--white);
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: -0.025em;
+    color: var(--white);
 }
 
 .info-author-by {
-  margin-right: 5px;
-  font-size: 14px;
-  color: var(--grey);
+    margin-right: 5px;
+    font-size: 14px;
+    color: var(--grey);
 }
 
 .info-author-name {
-  color: var(--green);
+    color: var(--green);
 }
 
 .colour-palette-section {
-  display: flex;
-  gap: 2px;
-  line-height: var(--swatchsize);
-  /* border: 1px solid var(--lightgrey); */
+    display: flex;
+    gap: 2px;
+    line-height: var(--swatchsize);
+    /* border: 1px solid var(--lightgrey); */
 }
 
 div.colour-palette-section div {
-  height: var(--swatchsize);
-  width: var(--swatchsize);
-  /* border: 1px solid var(--lightgrey); */
+    height: var(--swatchsize);
+    width: var(--swatchsize);
+    /* border: 1px solid var(--lightgrey); */
 }
 
 div.all-tags-frame {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 div.tags-frame {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 3px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3px;
 }
 
 div.tags-frame div {
-  width: max-content;
-  background-color: var(--darkgrey);
-  color: var(--lightgrey);
-  font-weight: var(--semibold);
-  line-height: 100%;
-  padding: 3px 8px;
-  border-radius: 5px;
-  font-size: 14px;
+    width: max-content;
+    background-color: var(--darkgrey);
+    color: var(--lightgrey);
+    font-weight: var(--semibold);
+    line-height: 100%;
+    padding: 3px 8px;
+    border-radius: 5px;
+    font-size: 14px;
 }
 
 div.like-and-download {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
 
 div.like-and-download span {
-  display: flex;
-  flex-direction: row;
-  gap: 6px;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+    align-items: center;
 }
 
 div.like-and-download span span {
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: var(--regular);
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: var(--regular);
 }
 
 .icon-button {
-  font-size: 24px;
-  line-height: 100%;
-  color: var(--green);
+    font-size: 24px;
+    line-height: 100%;
+    color: var(--green);
 }
