--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+@import "utilities/reset.css";
+/* meyer reset */
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap");
+@import "./components/navbar.css";
+@import "./components/hero.css";
+@import "./components/effects.css";
+@import "./components/profiles-gallery.css";
+@import "./components/info.css";
+@import "./components/footer.css";
+
+:root {
+    --black: #000;
+    --darkest: #111;
+    --dark: #252525;
+    --darkgrey: #333;
+    --grey: #777;
+    --lightgrey: #999;
+    --green: #44d62c;
+    --white: #fff;
+    --light: 300;
+    --regular: 400;
+    --semibold: 600;
+    --bold: 700;
+
+    --swatchsize: 10px;
+
+    --chroma: linear-gradient(
+            90deg,
+            #ff0000 4.17%,
+            #ffff00 27.6%,
+            #ffff00 34.79%,
+            #00ffff 65.52%,
+            #3300ff 80.57%,
+            #ff00ff 95.63%
+    );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+    scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    background-color: var(--dark);
+    overflow: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divider-gap {
+    height: 15px;
 }
