--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -1,6 +1,6 @@
 .hero {
     background-color: var(--black);
-    background-image: url(resul-kaya-xxL1FavYOh0-unsplash-cut.jpg);
+    background-image: url(../assets/resul-kaya-xxL1FavYOh0-unsplash-cut.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,7 +32,7 @@
 
 @media (max-width: 960px) {
     .hero {
-        background-image: url(resul-kaya-xxL1FavYOh0-unsplash-cut.jpg);
+        background-image: url(../assets/resul-kaya-xxL1FavYOh0-unsplash-cut.jpg);
     }
 
     .hero-heading {
