Search Bar functionality for front end and matching back end support in GET

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 @import "./components/hero.css";
 @import "./components/effects.css";
 @import "./components/profiles-gallery.css";
+@import "./components/filter-frame.css";
 @import "./components/info.css";
 @import "./components/footer.css";
 
