--- a/src/components/profiles-gallery.css
+++ b/src/components/profiles-gallery.css
@@ -409,3 +409,48 @@ input:focus {
     height: 100%;
     z-index: 1;
 }
+
+div.grid-span {
+    grid-column: 1/-1;
+}
+
+div.loading {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 16px;
+    color: var(--white);
+    margin: 5vh;
+    text-align: center;
+    line-height: 150%;
+}
+
+.gallery-footer {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 16px;
+    padding: 5vh;
+}
+
+
+.gallery-footer a {
+    /*font-family: "Titillium Web", sans-serif;*/
+    /*font-size: 16px;*/
+    text-decoration: none;
+    color: var(--white);
+    background-color: var(--black);
+    cursor: pointer;
+    border: 1px solid var(--green);
+    border-radius: 6px;
+    text-align: center;
+    line-height: 24px;
+    box-sizing: border-box;
+}
+
+.gallery-footer a:hover {
+    color: var(--green);
+    background-color: var(--dark);
+}
+
+.footer-arrow {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0 20px;
+}
