--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "utilities/reset.css";
 /* meyer reset */
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap");
+@import "utilities/fonts.css";
 @import "./components/navbar.css";
 @import "./components/hero.css";
 @import "./components/effects.css";
@@ -8,6 +8,11 @@
 @import "./components/filter-frame.css";
 @import "./components/info.css";
 @import "./components/footer.css";
+@import "components/help.css";
+@import "./components/about.css";
+@import "./components/lightbox.css";
+
+/*@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");*/
 
 :root {
     --black: #000;
