--- a/src/components/profiles-gallery.css
+++ b/src/components/profiles-gallery.css
@@ -140,6 +140,18 @@ div.input.search {
     flex-grow: 1;
 }
 
+.icon-anchor::before, .icon-anchor::after {
+    position: absolute;
+    top: 0;
+    line-height: 30px !important;
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font: var(--fa-font-solid);
+    font-size: 30px;
+    pointer-events: none;
+}
+
 div.input.tab {
     flex-grow: 1;
     flex-basis: 30%;
@@ -148,20 +160,6 @@ div.input.tab {
 
 div.input.search {
     min-width: 250px;
-}
-
-.icon-anchor::before, .icon-anchor::after {
-    position: absolute;
-    top: 0;
-    line-height: 30px !important;
-    display: inline-block;
-    font-family: "Font Awesome 6 Free", serif;
-    font-weight: 900;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    pointer-events: none;
 }
 
 .icon-anchor::before {
