--- a/src/components/about.css
+++ b/src/components/about.css
@@ -13,9 +13,7 @@ section.relative-parent {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    /*transform-origin: center;*/
     transform: translateZ(-2px) scale(calc(1 + 2 / 10));
-    /* scale(min) = 1 + (translateZ * -1) / perspective; */
 }
 
 
@@ -44,8 +42,6 @@ section.relative-parent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*text-align: center;*/
-    /*background-color: var(--black);*/
     color: var(--white);
     font-family: "Titillium Web", sans-serif;
     line-height: 180%;
@@ -67,7 +63,6 @@ section.relative-parent {
 }
 
 .about-content div p {
-    /*border: 1px solid red;*/
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     color: var(--lightgrey);
@@ -89,7 +84,7 @@ section.relative-parent {
 .about-content-foreground {
     background-color: rgba(0, 0, 0, 85%);
     max-width: 650px;
-    padding: 50px;
+    padding: 3vw;
     margin-bottom: 50px;
 }
 
